minus not working

--- a/smartgraph.properties
+++ b/smartgraph.properties
@@ -1,7 +1,8 @@
 # Vertex related configurations
 #
+vertex.shape = square
 vertex.allow-user-move = true
-vertex.radius = 15
+vertex.radius = 20
 vertex.tooltip = true
 vertex.label = true
 
