--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
     id 'application'
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'org.beryx.jlink' version '2.25.0'
+    id 'org.beryx.jlink' version '2.24.1'
 }
 
 group 'org.example'
@@ -39,6 +39,12 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml']
 
 
+}
+
+tasks.jar {
+    manifest {
+        attributes["Main-Class"] = "org.example.demojavafx.HelloApplication"
+    }
 }
 
 dependencies {
@@ -72,10 +78,24 @@ jlink {
     imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
-        name = 'app'
+        name = 'WinApplication'
     }
 }
 
 jlinkZip {
     group = 'distribution'
 }
+
+jpackage() {
+    if (org.gradle.internal.os.OperatingSystem.current().windows) {
+        imageOptions += ['--icon', 'icon.ico']
+    }
+    imageOptions += ['--vendor', 'MyCompany'
+    ]
+    installerOptions += [
+            '--vendor', 'MyCompany',
+            '--app-version', version
+    ]
+}
+
+
