--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,11 @@ plugins {
     id 'application'
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'org.beryx.jlink' version '2.24.1'
+    id 'org.beryx.jlink' version '3.1.1'
 }
 
 group 'org.example'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 repositories {
     mavenCentral()
@@ -22,8 +22,10 @@ ext {
     junitVersion = '5.10.0'
 }
 
-sourceCompatibility = '21'
-targetCompatibility = '21'
+java {
+    sourceCompatibility = '21'
+    targetCompatibility = '21'
+}
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
